<resources>
    <string name="app_name">MFill</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_token">Temporary token</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobile_number">This mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signUp">SignUp</string>
    <string name="resetPassword">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="error_passwords_are_not_matched">Passwords are not matched</string>
    <string name="submit">Submit</string>
    <string name="no_internet">Please check your internet connectivity</string>
    <string name="title_activity_select_store">Select Store</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
